--- a/80s-sitcoms.html
+++ b/80s-sitcoms.html
@@ -2,14 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>My semantic webpage</title>
+        <title>80's Sitcoms</title>
     </head>
 
 <body>
-  <a href="70s-sitcoms.html">70s Sitcoms</a>
-  <a href="80s-sitcoms.html">80s Sitcoms</a>
-  <a href="semantic-elements2.html">90s Sitcoms</a>
-  <h1>My favorite sitcoms: A semantic webpage</h1><br>
+    <a href="70s-sitcoms.html">70s Sitcoms</a>
+    <a href="80s-sitcoms.html">80s Sitcoms</a>
+    <a href="semantic-elements2.html">90s Sitcoms</a>
+  <h1>80s</h1><br>
   <h2>90s sitcoms</h2>
   <p>I think <strong>Seinfeld</strong> wins this category for me. I think it was very funny for a <em>show about nothing.</em></p>
   <h3>Early Aughts</h3>
