--- a/CSS-basics/index.html
+++ b/CSS-basics/index.html
@@ -16,7 +16,7 @@
         background-color: dodgerblue;
       }
       .purple-text {
-         color: hsla(240, 0, 0, .5);
+         color: hsla(0, 2%, 9%, 0.5);
       }
       .important {
         font-weight:bold;
@@ -38,7 +38,7 @@
             h1 {
         color: red;
         border-style: solid;
-        border-width: 1 px;
+        border-width: 1px;
         border-color: red;
       }
       p.important {
@@ -49,6 +49,15 @@
         border-color: orange;
         border-width: 3px;
         width: 25%;
+      }
+      h1 {
+        position: absolute;
+        left: 220px;
+        top: 300px;
+        z-index: 1;
+      }
+      a {position: fixed;
+        z-index: 1;
       }
 
         </style>
