--- a/Kitties-to-go-assignment/kitties-to-go.html
+++ b/Kitties-to-go-assignment/kitties-to-go.html
@@ -16,8 +16,8 @@
     </nav>
     </div>
 
-  <div class="container">
-    <section class="main-content">
+    <div class="container">
+      <section class="main-content">
         <img src="lesson04-mock2-banner-image.jpg" alt="Cats eyes">
         <h1>Cats in the news</h1>
         <p>Why do they grab pompom in mouth and put in water dish?<a href="https://deziroo.com/blogs/pawsitive-connections/why-does-my-cat-put-toys-in-the-water-bowl">Why they drown toys</a></p>
@@ -26,6 +26,7 @@
     </section>
 
     <aside class="sidebar">
+      <h1>Cat of the week</h1>
         <img src="lesson04-mock3-sidebar-cat.jpg" alt="a gray and white kitten with blue/gray eyes">
         <p>Why do they grab pompom in mouth and put in water dish?<a href="https://deziroo.com/blogs/pawsitive-connections/why-does-my-cat-put-toys-in-the-water-bowl">Why they drown toys</a></p>
         <p>Why do they chew cords?<a href="https://www.webmd.com/pets/cats/what-to-do-if-my-cat-is-chewing-cords">Why they chew cords</a></p>
