--- a/CSS-basics/index.html
+++ b/CSS-basics/index.html
@@ -69,6 +69,5 @@
       <p id="lead-paragraph">The world is a happy and sensible place.</p>
       <a href="https://www.moles.washington.edu/uw-mole-welcomes-largest-cohort/">New MolES students learning to save the world</a>
       <a href="https://visitseattle.org/things-to-do/outdoors/seattles-top-parks/">Seattle has lots of cool Parks</a>
-      <img src="https://www.pexels.com/photo/white-and-grey-kitten-on-brown-and-black-leopard-print-textile-45201/" alt="A white and light brown kitten on a blanket.">
-    </body>
+      <img src="kitten.jpg" alt="An adorable image of a grey kitten with blue eyes and brown woven wicker basket.">    </body>
 </html>
