--- a/Kitties-to-go-assignment/kitties-to-go.html
+++ b/Kitties-to-go-assignment/kitties-to-go.html
@@ -19,17 +19,20 @@
     <div class="container">
       <section class="main-content">
         <img src="lesson04-mock2-banner-image.jpg" alt="Cats eyes">
+      </section>  
+
+    <aside class="sidebar"> 
         <h1>Cats in the news</h1>
         <p>Why do they grab pompom in mouth and put in water dish?<a href="https://deziroo.com/blogs/pawsitive-connections/why-does-my-cat-put-toys-in-the-water-bowl">Why they drown toys</a></p>
         <p>Why do they chew cords?<a href="https://www.webmd.com/pets/cats/what-to-do-if-my-cat-is-chewing-cords">Why they chew cords</a></p>
         <!-- Add more content as needed -->
-    </section>
+      </aside> 
+    
 
     <aside class="sidebar">
       <h1>Cat of the week</h1>
         <img src="lesson04-mock3-sidebar-cat.jpg" alt="a gray and white kitten with blue/gray eyes">
-        <p>Why do they grab pompom in mouth and put in water dish?<a href="https://deziroo.com/blogs/pawsitive-connections/why-does-my-cat-put-toys-in-the-water-bowl">Why they drown toys</a></p>
-        <p>Why do they chew cords?<a href="https://www.webmd.com/pets/cats/what-to-do-if-my-cat-is-chewing-cords">Why they chew cords</a></p>
+        <p>This week's cat is Harold. He likes to stare at imaginary bugs, give love blinks and purr in your lap.</a></p>
         <!-- Add more content as needed -->
     </aside>
   </div>
